kubernetes/apps/security/authentik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "authentik.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: authentik
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "authentik.${SECRET_DOMAIN}-tls"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
spec:
    rules:
        - host: "id.${SECRET_DOMAIN}"
          http:
              paths: /outpost.goauthentik.io
              pathType: Prefix
              backend:
                  # Or, to use an external Outpost, create an ExternalName service and reference that here.
                  # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
                  service:
                      name: ak-outpost-authentik-embedded-outpost
                      port:
                          number: 9000
