kubernetes/apps/security/authentik/app/clusterpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: authentik-ingress-annotations
  annotations:
    policies.kyverno.io/title: Authentik ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses. When
      the `authentik.home.arpa/enabled` annotation is `true` it
      applies the nginx auth annotations for use with Authentik.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: auth
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                authentik.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/auth-response-headers): |-
                Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                https://authentik.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$escaped_request_uri
              +(nginx.ingress.kubernetes.io/auth-snippet): |-
                proxy_set_header X-Forwarded-Host $http_host;
              +(nginx.ingress.kubernetes.io/auth-url): |-
                http://ak-outpost-proxy-outpost.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
